--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 
         <p class="view"><a href="https://github.com/davidshaw">View My GitHub Profile</a></p>
+				<p class="view"><a href="http://dshaw.net">dshaw.net</a></p>
+				<p class="view"><a href="http://linkedin.com/in/davidshawnet"</a></p>
 
       </header>
       <section>
