--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <p class="view"><a href="https://github.com/davidshaw">View My GitHub Profile</a><br/>
 				<a href="http://dshaw.net">dshaw.net</a><br/>
-				<a href="http://linkedin.com/in/davidshawnet"></a></p>
+				<a href="http://linkedin.com/in/davidshawnet">LinkedIn</a></p>
 
       </header>
       <section>
